syntax="proto2";

package cache;

message FightReportCache
{
	required int64 uid = 1;
	required bytes report = 2;
	required int64 time_stamp = 3;
}