syntax="proto2";

package cache;

message KingSkill
{
	required int32 skill_id = 1;
	required int32 lv = 2;
	required int64 timestamp = 3;
}

message KingCache
{
	required int32 king_lv = 1;
	map<int32,KingSkill> king_skills = 2;
}