syntax="proto3";

package cache;

message AccountCache
{
    int64  roleId           = 1;
    string username         = 2;
    string source           = 3;
    string sourceToken      = 4;
    int64  loginTime        = 5;
    int64  createTime       = 6;
}